--- a/src/App.css
+++ b/src/App.css
@@ -208,7 +208,6 @@ body {
   margin: 10px auto;
   max-width: 80%;
   max-height: 250px;
-  transform: rotate(180deg);
 }
 .circle-bg {
   fill: none;
@@ -243,9 +242,15 @@ body {
   stroke: #fdb000;
 }
 .percentage {
-  fill: #666;
+  font-weight: bold;
   font-family: sans-serif;
   font-size: 0.5em;
+  text-anchor: middle;
+}
+.percentageSucces {
+  fill: #666;
+  font-family: sans-serif;
+  font-size: 0.3em;
   text-anchor: middle;
 }
 /* Bottom for Header on Section Top */
